--- a/热题100/8-12.md
+++ b/热题100/8-12.md
@@ -82,3 +82,20 @@
 //截取滑动窗口   
 
 //太慢
+
+---------------------------------12-----------------------------
+给定两个字符串 s 和 t，长度分别是 m 和 n，返回 s 中的 最短窗口 子串，使得该子串包含 t 中的每一个字符（包括重复字符）。如果没有这样的子串，返回空字符串 ""。
+
+测试用例保证答案唯一。
+
+示例 1：
+
+输入：s = "ADOBECODEBANC", t = "ABC"
+输出："BANC"
+解释：最小覆盖子串 "BANC" 包含来自字符串 t 的 'A'、'B' 和 'C'。
+示例 2：
+
+输入：s = "a", t = "a"
+输出："a"
+
+双指针，hashmap判断ABC，记录对应索引，右指针往右动，满足ABC动左指针到最近的一个ABC，怎么移动，用另一个hashmap提前记录下字符串转char数组的索引
