--- a/热题100/2.md
+++ b/热题100/2.md
@@ -1,35 +1,78 @@
 # 题目
 给你一个字符串数组，请你将 字母异位词 组合在一起。可以按任意顺序返回结果列表。
 - 示例 1:
-  - 输入: strs = ["eat", "tea", "tan", "ate", "nat", "bat"]
-  - 输出: [["bat"],["nat","tan"],["ate","eat","tea"]]
-  - 解释：在 strs 中没有字符串可以通过重新排列来形成 "bat"。字符串 "nat" 和 "tan" 是字母异位词，因为它们可以重新排列以形成彼此。字符串 "ate" ，"eat" 和 "tea" 是字母异位词，因为它们可以重新排列以形成彼此。
+ - 输入: strs = ["eat", "tea", "tan", "ate", "nat", "bat"]
+ - 输出: [["bat"],["nat","tan"],["ate","eat","tea"]]
+ - 解释：在 strs 中没有字符串可以通过重新排列来形成 "bat"。字符串 "nat" 和 "tan" 是字母异位词，因为它们可以重新排列以形成彼此。字符串 "ate" ，"eat" 和 "tea" 是字母异位词，因为它们可以重新排列以形成彼此。
 
 - 示例 2:
-  - 输入: strs = [""]
-  - 输出: [[""]]
+ - 输入: strs = [""]
+ - 输出: [[""]]
 
 - 示例 3:
-  - 输入: strs = ["a"]
-  - 输出: [["a"]]
+ - 输入: strs = ["a"]
+ - 输出: [["a"]]
 # 自解
 解不出
 # 原解
 ## 排序签名
 ```java
-
+class Solution {
+    public List<List<String>> groupAnagrams(String[] strs) {
+        Map<String, List<String>> map = new HashMap<String, List<String>>();
+        for (String str : strs) {
+            //将数组中的字符串提取出来，变成一个char[]数组
+            char[] array = str.toCharArray();
+            //对char[]数组进行排序，字母异位词排序后的结果是一样的
+            Arrays.sort(array);
+            //将char[]数组变成字符串签名key作为是同一个字母异位词的标识
+            String key = new String(array);
+            //找Hashmap中key对应的list中是否有值，有则返回对应的list,没有就新建一个list
+            List<String> list = map.getOrDefault(key, new ArrayList<String>());
+            //将本次的字母异位词加入对应的list集合中
+            list.add(str);
+            //将key和list集合放入hashmap中
+            map.put(key, list);
+        }
+        //返回list集合，集合存所有同一字母异位词集合
+        return new ArrayList<List<String>>(map.values());
+    }
+}
 ```
 ## 计数签名
 ```java
-
+class Solution {
+    public List<List<String>> groupAnagrams(String[] strs) {
+        Map<String, List<String>> map = new HashMap<String, List<String>>();
+        for (String str : strs) {
+            //设置一个数组用于计数
+            int[] counts = new int[26];
+            int length = str.length();
+            for (int i = 0; i < length; i++) {
+                //取数组中字符串的字母减去‘a’得到 a 与该字母的差值 作为索引，count[]+1值加一作为出现的次数标记
+                counts[str.charAt(i) - 'a']++;
+            }
+            // 将出现次数大于 0 的字母和出现次数按顺序拼接成字符串，作为哈希表的键
+            StringBuffer sb = new StringBuffer();
+            for (int i = 0; i < 26; i++) {
+                if (counts[i] != 0) {
+                    //用索引加‘a’还原原来的字母
+                    sb.append((char) ('a' + i));
+                    //拼接出现的次数
+                    sb.append(counts[i]);
+                }
+            }
+            //拼接结算作为key
+            String key = sb.toString();
+            List<String> list = map.getOrDefault(key, new ArrayList<String>());
+            list.add(str);
+            map.put(key, list);
+        }
+        return new ArrayList<List<String>>(map.values());
+    }
+}
 ```
 # 知识点
-给出str.toCharArray()， Arrays.sort(arr);/数组转字符串
-	String key = new String(arr);类似这种的常用常见方法
-Copilot said:
-Copilot
-下面给你一份 Java 常用字符串和数组处理方法速查表，类似你提到的 str.toCharArray()、Arrays.sort(arr)、new String(arr)，并扩展一些常见场景：
-
 ✅ 字符串相关
 方法	作用	示例
 str.toCharArray()	将字符串转换为 char[]	"abc".toCharArray() → ['a','b','c']
@@ -49,7 +92,7 @@ String.valueOf(arr)	转字符串（也可用于数字）	String.valueOf(123) →
 ✅ 集合相关
 方法	作用	示例
 list.add(x)	添加元素	list.add("abc")
-map.getOrDefault(key, default)	获取值或默认值	map.getOrDefault("k", new ArrayList<>())
+map.getOrDefault(key, default)	返回key对应value类型的值	map.getOrDefault("k", new ArrayList<>())
 map.computeIfAbsent(key, k -> new ArrayList<>())	如果不存在则创建并放入	map.computeIfAbsent("k", k -> new ArrayList<>()).add("v")
 # 总结
-
+将一类中有相同特征的部分取出来作为hashmap的key，从而实现分类
