2.字母异位词分组

--- a/热题100/2.字母异位词分组.md
+++ b/热题100/2.字母异位词分组.md
@@ -73,26 +73,56 @@ class Solution {
 }
 ```
 # 知识点
-✅ 字符串相关
-方法	作用	示例
-str.toCharArray()	将字符串转换为 char[]	"abc".toCharArray() → ['a','b','c']
-str.length()	获取字符串长度	"abc".length() → 3
-str.charAt(i)	获取指定位置字符	"abc".charAt(1) → 'b'
-str.substring(begin, end)	截取子串（左闭右开）	"abcdef".substring(1,4) → "bcd"
-str.split(regex)	按正则分割字符串	"a,b,c".split(",") → ["a","b","c"]
-str.trim()	去掉首尾空格	"  hi  ".trim() → "hi"
-str.toUpperCase() / str.toLowerCase()	大小写转换	"abc".toUpperCase() → "ABC"
-str.replace(old,new)	替换子串	"abc".replace("a","x") → "xbc"
-✅ 数组相关
-方法	作用	示例
-Arrays.sort(arr)	排序数组	Arrays.sort(new int[]{3,1,2}) → [1,2,3]
-Arrays.toString(arr)	数组转字符串（调试用）	Arrays.toString(new int[]{1,2}) → "[1, 2]"
-new String(char[])	char[] 转字符串	new String(new char[]{'a','b'}) → "ab"
-String.valueOf(arr)	转字符串（也可用于数字）	String.valueOf(123) → "123"
-✅ 集合相关
-方法	作用	示例
-list.add(x)	添加元素	list.add("abc")
-map.getOrDefault(key, default)	返回key对应value类型的值	map.getOrDefault("k", new ArrayList<>())
-map.computeIfAbsent(key, k -> new ArrayList<>())	如果不存在则创建并放入	map.computeIfAbsent("k", k -> new ArrayList<>()).add("v")
+## ✅ 字符串相关
+
+| 方法 | 作用 | 示例 |
+|---|---|---|
+| str.toCharArray() | 将字符串转换为 char[] | "abc".toCharArray() → ['a','b','c'] |
+| str.charAt(i) | 获取指定位置字符 | "abc".charAt(1) → 'b' |
+| str.substring(begin, end) | 截取子串（左闭右开） | "abcdef".substring(1,4) → "bcd" |
+| str.split(regex) | 按正则分割字符串 | "a,b,c".split(",") → ["a","b","c"] |
+| str.trim() | 去掉首尾空格 | "  hi  ".trim() → "hi" |
+| str.toUpperCase() / str.toLowerCase() | 大小写转换 | "abc".toUpperCase() → "ABC" |
+| str.replace(old, new) | 替换子串 | "abc".replace("a","x") → "xbc" |
+
+## ✅ 数组相关
+
+| 方法 | 作用 | 示例 |
+|---|---|---|
+| Arrays.sort(arr) | 排序数组 | Arrays.sort(new int[]{3,1,2}) → [1,2,3] |
+| Arrays.toString(arr) | 数组转字符串（调试用） | Arrays.toString(new int[]{1,2}) → "[1, 2]" |
+| new String(char[]) | char[] 转字符串 | new String(new char[]{'a','b'}) → "ab" |
+| String.valueOf(x) | 转字符串（也可用于数字） | String.valueOf(123) → "123" |
+
+## ✅ 集合相关
+
+| 方法 | 作用 | 示例 |
+|---|---|---|
+| list.add(x) | 添加元素 | list.add("abc") |
+| map.getOrDefault(key, default) | 返回 key 对应的值，不存在则返回默认值 | map.getOrDefault("k", new ArrayList<>()) |
+| map.computeIfAbsent(key, k -> new ArrayList<>()) | 如果不存在则创建并放入 | map.computeIfAbsent("k", k -> new ArrayList<>()).add("v") |
+
+## ✅ StringBuffer 相关（可变字符串）
+
+| 方法 | 作用 | 示例 |
+|---|---|---|
+| new StringBuffer() / new StringBuffer(str) | 构造空/带初始内容的可变串 | new StringBuffer("hi") |
+| append(x) | 追加内容（链式） | new StringBuffer("a").append("b").append(1) → "ab1" |
+| insert(offset, x) | 在指定位置插入 | new StringBuffer("ace").insert(1, "b") → "abce" |
+| delete(start, end) | 删除区间 [start, end) | new StringBuffer("abcdef").delete(1,4) → "aef" |
+| deleteCharAt(index) | 删除指定位置字符 | new StringBuffer("abc").deleteCharAt(1) → "ac" |
+| replace(start, end, str) | 用 str 替换区间 [start, end) | new StringBuffer("abcdef").replace(2,5,"XY") → "abXYf" |
+| reverse() | 反转 | new StringBuffer("abc").reverse() → "cba" |
+| setCharAt(index, ch) | 设置指定位置字符 | buf = new StringBuffer("abc"); buf.setCharAt(1,'X') → "aXc" |
+| setLength(newLen) | 设置长度（截断或用 '\u0000' 扩展） | buf = new StringBuffer("abc"); buf.setLength(2) → "ab" |
+| length() | 当前长度 | new StringBuffer("abc").length() → 3 |
+| capacity() | 当前容量 | new StringBuffer().capacity() → 16（实现相关） |
+| ensureCapacity(minCapacity) | 保证最小容量 | buf.ensureCapacity(100) |
+| charAt(index) | 获取指定位置字符 | new StringBuffer("abc").charAt(0) → 'a' |
+| substring(begin[, end]) | 生成不可变子串 | new StringBuffer("abcdef").substring(1,4) → "bcd" |
+| indexOf(str[, fromIndex]) | 查找第一次出现位置 | new StringBuffer("ababa").indexOf("ba") → 2 |
+| lastIndexOf(str[, fromIndex]) | 查找最后一次出现位置 | new StringBuffer("ababa").lastIndexOf("ba") → 3 |
+| toString() | 转为 String | new StringBuffer("abc").toString() → "abc" |
+
 # 总结
 将一类中有相同特征的部分取出来作为hashmap的key，从而实现分类
