3.最长连续序列.md

--- a/热题100/3.最长连续序列.md
+++ b/热题100/3.最长连续序列.md
@@ -19,13 +19,15 @@ class Solution {
         for (int num : nums) {
             num_set.add(num);
         }
-        //定义 最长数字连续序列 变量
+        //定义 历史最长数字连续序列 变量
         int longestStreak = 0;
         //遍历set
         for (int num : num_set) {
             //判断前一个数是否存在于数组，不存在做以下逻辑，存在的不用考虑
             if (!num_set.contains(num - 1)) {
+                //当前数字
                 int currentNum = num;
+                //当前最长数字连续序列
                 int currentStreak = 1;
                 //用while循环判断+1之后的数是否还存在于map中
                 while (num_set.contains(currentNum + 1)) {
@@ -34,7 +36,7 @@ class Solution {
                     //记录当前数字的最长值
                     currentStreak += 1;
                 }
-                //不断更新最长值
+                //对比当前最长数字连续序列 与 历史最长数字连续序列 不断更新最长值
                 longestStreak = Math.max(longestStreak, currentStreak);
             }
         }
@@ -53,3 +55,4 @@ O(1) < O(log n) < O(n) < O(n log n) < O(n²) < O(n³) < O(2^n) < O(n!)
 # 总结
 - 通过判断前一个数是否存在于数组来减少多余的步骤<br>
 - while循环的循环条件 可以通过 循环体来实现 可变的循环条件
+
