3.最长连续序列

--- a/热题100/3.最长连续序列.md
+++ b/热题100/3.最长连续序列.md
@@ -53,6 +53,7 @@ O(1) < O(log n) < O(n) < O(n log n) < O(n²) < O(n³) < O(2^n) < O(n!)
 循环取值 + add方法
 
 # 总结
-- 通过判断前一个数是否存在于数组来减少多余的步骤<br>
-- while循环的循环条件 可以通过 循环体来实现 可变的循环条件
+1. 通过判断前一个数是否存在于数组来减少多余的步骤<br>
+2. while循环的循环条件 可以通过 循环体来实现 可变的循环条件
+
 
