--- a/热题100/5-7.md
+++ b/热题100/5-7.md
@@ -1,19 +1,17 @@
------------------------------------5-----------------------------------------------
+# 题目
 给定一个长度为 n 的整数数组 height 。有 n 条垂线，第 i 条线的两个端点是 (i, 0) 和 (i, height[i]) 。
-
 找出其中的两条线，使得它们与 x 轴共同构成的容器可以容纳最多的水。
-
-返回容器可以储存的最大水量。
-
-
-输入：[1,8,6,2,5,4,8,3,7]
-输出：49 
-解释：图中垂直线代表输入数组 [1,8,6,2,5,4,8,3,7]。在此情况下，容器能够容纳水（表示为蓝色部分）的最大值为 49。
-示例 2：
-
-输入：height = [1,1]
-输出：1
-暴力：双循环
+返回容器可以储存的最大水量。<br/>
+- 示例 1：
+  - 输入：[1,8,6,2,5,4,8,3,7]
+  - 输出：49 
+  - 解释：在索引处以数组值作高，nums[1]=8和nums[8]=7索引差7，高取较小值7，输出面积7*7=49<br>
+# 自解
+- 暴力：双循环
+  - 外层循环i固定索引初始值，内层循环j不断扩大，外层循环i+1重复内循环
+```java
+class Solution {
+    public int maxArea(int[] height) {
 int sum;
 int temp = 0;
 for(int i = 0;i<height.length;i++){
@@ -22,26 +20,31 @@ for(int i = 0;i<height.length;i++){
     sum=(j - i)*((height[i] > height[j]) ? height[j] : height[i]);
     temp = (temp < sum)? sum : temp;
 }
-return temp;
 }
-
+return temp;
+    }
+}
+```
+# 原解
+- 长板往内移动，肯定会小；短板往内移动，不确定；所以只要让小板往内移动即可
+```java
 class Solution {
     public int maxArea(int[] height) {
         int i = 0, j = height.length - 1, res = 0;
         while(i < j) {
+            //每次循环Math.max选最大值然后保存到res进行下次的比较
             res = height[i] < height[j] ? 
+            //动小板
                 Math.max(res, (j - i) * height[i++]): 
                 Math.max(res, (j - i) * height[j--]); 
         }
         return res;
     }
 }
+```
+# 总结
+双指针，通过安排指针位置和移动方式，实现一次遍历得出结果<br>
 
-作者：Krahets
-链接：https://leetcode.cn/problems/container-with-most-water/solutions/11491/container-with-most-water-shuang-zhi-zhen-fa-yi-do/
-
-## 双指针，一次遍历，得出结果
-## 思路:长板往内移动，肯定会小；短板往内移动，不确定；所以只要让小板往内移动即可
 
 
 --------------------------------------------6-------------------------------------------------------
