--- a/热题100/5-7.md
+++ b/热题100/5-7.md
@@ -97,6 +97,441 @@ nums[0] + nums[3] + nums[4] = (-1) + 2 + (-1) = 0 。
 -4 -1 0 1 2 
 
 ## 待再思考
+O(1)
+常数时间，比如数组按索引访问、哈希表查找。
+
+
+O(log n)
+对数时间，比如二分查找、平衡二叉树查找。
+
+
+O(n)
+线性时间，比如遍历数组、查找最大值。
+
+
+O(n log n)
+线性对数时间，比如归并排序、快速排序（平均）、堆排序。
+
+
+O(n²)
+平方时间，比如冒泡排序、选择排序、插入排序（最坏）。
+
+
+O(n³)
+立方时间，比如三重嵌套循环。
+
+
+O(2^n)
+指数时间，比如递归解决子集问题、暴力解 NP 问题。
+
+
+O(n!)
+阶乘时间，比如全排列生成、旅行商问题暴力解。
+给你一个整数数组 nums ，判断是否存在三元组 [nums[i], nums[j], nums[k]] 满足 i != j、i != k 且 j != k ，同时还满足 nums[i] + nums[j] + nums[k] == 0 。请你返回所有和为 0 且不重复的三元组。
+
+注意：答案中不可以包含重复的三元组。
+
+示例 1：
+
+输入：nums = [-1,0,1,2,-1,-4]
+输出：[[-1,-1,2],[-1,0,1]]
+解释：
+nums[0] + nums[1] + nums[2] = (-1) + 0 + 1 = 0 。
+nums[1] + nums[2] + nums[4] = 0 + 1 + (-1) = 0 。
+nums[0] + nums[3] + nums[4] = (-1) + 2 + (-1) = 0 。
+不同的三元组是 [-1,0,1] 和 [-1,-1,2] 。
+注意，输出的顺序和三元组的顺序并不重要。
+
+自解：for target + 两数之和
+-4 -1 0 1 2 
+
+## 待再思考
+
+### ✅ JavaScript 数组操作速查表
+
+| 分类       | 方法                | 作用                                   | 示例代码 |
+|------------|----------------------|----------------------------------------|----------|
+| **增加元素** | `push()`           | 在末尾添加元素                        | `arr.push(6)` |
+|            | `unshift()`         | 在开头添加元素                        | `arr.unshift(0)` |
+|            | `splice()`          | 在指定位置插入元素                    | `arr.splice(2, 0, 'new')` |
+| **删除元素** | `pop()`            | 删除末尾元素                          | `arr.pop()` |
+|            | `shift()`           | 删除开头元素                          | `arr.shift()` |
+|            | `splice()`          | 删除指定位置元素                      | `arr.splice(2, 1)` |
+|            | `filter()`          | 按条件排除元素                        | `arr.filter(item => item !== 3)` |
+| **修改元素** | 直接赋值           | 修改指定索引元素                      | `arr[1] = 'changed'` |
+|            | `map()`             | 批量修改并返回新数组                  | `arr.map(item => item * 2)` |
+| **查找元素** | `indexOf()`        | 查找元素索引                          | `arr.indexOf(3)` |
+|            | `lastIndexOf()`     | 查找最后出现的索引                    | `arr.lastIndexOf(3)` |
+|            | `includes()`        | 判断是否包含某元素                    | `arr.includes(3)` |
+|            | `find()`            | 找到符合条件的第一个元素              | `arr.find(item => item > 3)` |
+|            | `findIndex()`       | 找到符合条件的索引                    | `arr.findIndex(item => item > 3)` |
+| **排序**    | `sort()`            | 排序（默认按字符串）                  | `arr.sort((a, b) => a - b)` |
+|            | `reverse()`         | 反转数组                              | `arr.reverse()` |
+| **合并**    | `concat()`          | 合并数组                              | `arr.concat([6, 7])` |
+|            | 展开运算符          | 合并数组                              | `[...arr, ...otherArr]` |
+| **去重**    | `Set`              | 利用 Set 去重                         | `[...new Set(arr)]` |
+|            | `filter()` + `indexOf()` | 过滤重复元素                     | `arr.filter((item, i) => arr.indexOf(item) === i)` |
+| **其他**    | `slice()`           | 截取数组（不修改原数组）              | `arr.slice(1, 3)` |
+|            | `join()`            | 数组转字符串                          | `arr.join(', ')` |
+|            | `reduce()`          | 累积计算                              | `arr.reduce((sum, item) => sum + item, 0)` |
+
+
+## java原生数组删除某个值，集合常用方法
+
+```java
+class Solution {
+    public List<List<Integer>> threeSum(int[] nums) {
+        for(int i = 0;i<lists.length;i++){
+        	List lists = new Arraylist(Array.asList(nums)) ;
+        	//从数组排除这个数
+    		List listsde = new ArrayList(lists.remove(i));
+        	//对剩下的数组进行遍历
+        	Map<Integer,Integer> map = new HashMap<>();
+    		for(int j=0;j<lists.length;j++){
+    			if(map.containsKey(lists[i]-listsde[j])){
+    				List anser = new Arraylist(Arraylist.asList(new int[]{map.get(lists[i]-listsde[j],j)}));
+    				List<List<Integer>> anserq = new Arraylist();
+    				anserq.add(anser);
+    			}
+    			map.add(listde[j],j);
+    		}
+        	
+        }
+        return anserq;
+    }
+}
+```
+
+# Java 数组与集合（List/Map）常用方法与易错点速查 📘
+
+> 本 README 整理了你在编码与刷题（如 LeetCode）中最常用的 Java 数组/集合 API、典型易错点与正确示例，并给出“三数之和”的标准解法模板。复制即可用。
+
+---
+
+## 目录
+- [快速自查清单](#快速自查清单)
+- [基础语法与命名](#基础语法与命名)
+- [数组（`int[]` 等）常用 API](#数组-int-等-常用-api)
+- [List 常用 API](#list-常用-api)
+- [`Arrays.asList` 与装箱坑位](#arraysaslist-与装箱坑位)
+- [Map 常用 API](#map-常用-api)
+- [值比较：`==` vs `equals`](#值比较--vs-equals)
+- [去重与保持顺序](#去重与保持顺序)
+- [Stream API（Java 8+）](#stream-apijava-8)
+- [三数之和（Three Sum）标准解法](#三数之和three-sum标准解法)
+- [两数之和思路（固定一数 + 哈希）](#两数之和思路固定一数--哈希)
+- [常见错误修正对照](#常见错误修正对照)
+- [附录：实用工具方法](#附录实用工具方法)
+
+---
+
+## 快速自查清单
+- [ ] 分清 **数组** 与 **List** 的 API：`arr.length` vs `list.size()`；`arr[i]` vs `list.get(i)`。
+- [ ] 理解 `Arrays.asList` 的行为与限制（固定大小、对基本类型数组返回 `List<int[]>`）。
+- [ ] 掌握 `remove(int)` 与 `remove(Object)` 的区别（按索引 vs 按值）。
+- [ ] 正确使用 `Map.put/get/containsKey`（没有 `add`）。
+- [ ] 会用 `System.arraycopy`、`Arrays.copyOfRange` 做数组删除与拼接。
+- [ ] 会用 `Arrays.sort` + **双指针**；能写 **去重** 逻辑。
+- [ ] 会用 `Stream` 的 `boxed/filter/map/collect` 与基本类型数组流。
+- [ ] 引用类型比较用 `equals`，不要用 `==`。
+
+---
+
+## 基础语法与命名
+
+### 类名/类型名大小写必须准确
+```java
+List<Integer> list = new ArrayList<>();   // ✅
+Map<Integer, Integer> map = new HashMap<>(); // ✅
+// Arraylist、Hashmap、Array 是错误写法
+```
+
+### 导入包
+```java
+import java.util.*;           // List, ArrayList, Map, HashMap, Arrays, Collections...
+import java.util.stream.*;    // 使用 Stream 时
+```
+
+### 数组 vs List 的基本操作
+```java
+int[] arr = {1, 2, 3};
+System.out.println(arr.length); // 3
+int x = arr[1];                 // 索引访问
+
+List<Integer> list = new ArrayList<>(Arrays.asList(1, 2, 3));
+System.out.println(list.size()); // 3
+int y = list.get(1);             // 索引访问
+```
+
+---
+
+## 数组（`int[]` 等）常用 API
+```java
+int[] arr = {10, 20, 30, 40};
+
+Arrays.sort(arr);                              // 排序（升序）
+int idx = Arrays.binarySearch(arr, 30);        // 二分查找（arr 必须已排序）
+int[] copy = Arrays.copyOf(arr, 6);            // 扩容/复制到指定长度
+int[] sub = Arrays.copyOfRange(arr, 1, 3);     // 复制子区间 [1, 3)
+
+System.out.println(Arrays.toString(arr));      // 打印一维数组
+int[][] matrix = {{1,2},{3,4}};
+System.out.println(Arrays.deepToString(matrix)); // 打印多维数组
+```
+
+**删除指定索引并返回新数组**（保序、不改原数组）：
+```java
+public static int[] removeAt(int[] arr, int index) {
+    if (index < 0 || index >= arr.length) {
+        throw new IndexOutOfBoundsException("index out of range: " + index);
+    }
+    int[] result = new int[arr.length - 1];
+    System.arraycopy(arr, 0, result, 0, index);
+    System.arraycopy(arr, index + 1, result, index, arr.length - index - 1);
+    return result;
+}
+```
+
+---
+
+## List 常用 API
+```java
+List<Integer> list = new ArrayList<>();
+list.add(10);                   // 末尾添加
+list.add(1, 20);                // 指定位置插入
+list.set(0, 99);                // 修改指定索引
+list.remove(1);                 // 按索引删除（删除原 20）
+list.remove(Integer.valueOf(99)); // 按值删除（删除 99）
+boolean has40 = list.contains(40);
+int size = list.size();
+list.clear();                   // 清空
+
+// 排序
+list = new ArrayList<>(Arrays.asList(3, 1, 2));
+Collections.sort(list);                     // 升序
+list.sort(Comparator.reverseOrder());       // 降序
+
+// 转换数组
+Integer[] arrBoxed = list.toArray(new Integer[0]);
+```
+
+> `Arrays.asList(…)` 返回 **固定大小** 的 List，不能 `add/remove`；如需可变 List：`new ArrayList<>(Arrays.asList(...))`。
+
+---
+
+## `Arrays.asList` 与装箱坑位
+```java
+int[] nums = {1, 2, 3};
+// 错误：这是 List<int[]>（只有一个元素，整条数组的引用）
+List<int[]> wrong = Arrays.asList(nums);
+
+// 正确：装箱为 List<Integer>
+List<Integer> list = Arrays.stream(nums).boxed().collect(Collectors.toList());
+```
+
+---
+
+## Map 常用 API
+```java
+Map<Integer, Integer> map = new HashMap<>();
+map.put(10, 0);                     // 没有 add()
+boolean seen = map.containsKey(10);
+int idx = map.get(10);              // 若 key 不存在，返回 null（注意基本类型拆箱）
+```
+
+---
+
+## 值比较：`==` vs `equals`
+```java
+String a = "x", b = new String("x");
+System.out.println(a == b);        // false（引用比较）
+System.out.println(a.equals(b));   // true（值比较）
+```
+- 基本类型（int、long…）用 `==`。
+- 引用类型（`String`、`Integer` 等）用 `equals()`。
+
+---
+
+## 去重与保持顺序
+```java
+List<Integer> src = Arrays.asList(1, 2, 2, 3);
+List<Integer> uniq = new ArrayList<>(new LinkedHashSet<>(src)); // 保持插入顺序的去重
+```
+
+---
+
+## Stream API（Java 8+）
+```java
+List<Integer> list = Arrays.asList(3, 1, 2, 2);
+List<Integer> res = list.stream()
+        .filter(x -> x > 1)
+        .distinct()
+        .sorted()
+        .collect(Collectors.toList());             // [2, 3]
+
+// 基本类型数组流
+int sum = Arrays.stream(new int[]{1, 2, 3}).sum();
+int[] filtered = Arrays.stream(new int[]{1, 2, 3, 2})
+        .filter(x -> x != 2)
+        .toArray();                                // [1, 3]
+```
+
+---
+
+## 三数之和（Three Sum）标准解法
+> 排序 + 双指针，易于去重，时间复杂度 \~ O(n^2)。
+```java
+import java.util.*;
+
+class Solution {
+    public List<List<Integer>> threeSum(int[] nums) {
+        List<List<Integer>> res = new ArrayList<>();
+        Arrays.sort(nums);
+        int n = nums.length;
+
+        for (int i = 0; i < n; i++) {
+            if (i > 0 && nums[i] == nums[i - 1]) continue; // 去重 a
+            int a = nums[i];
+            int l = i + 1, r = n - 1;
+            while (l < r) {
+                int sum = a + nums[l] + nums[r];
+                if (sum == 0) {
+                    res.add(Arrays.asList(a, nums[l], nums[r]));
+                    int b = nums[l], c = nums[r];
+                    while (l < r && nums[l] == b) l++;     // 去重 b
+                    while (l < r && nums[r] == c) r--;     // 去重 c
+                } else if (sum < 0) {
+                    l++;
+                } else {
+                    r--;
+                }
+            }
+        }
+        return res;
+    }
+}
+```
+
+---
+
+## 两数之和思路（固定一数 + 哈希）
+> 同样可行，但去重更复杂。建议仍以排序为基础。
+```java
+import java.util.*;
+
+class SolutionHash {
+    public List<List<Integer>> threeSum(int[] nums) {
+        List<List<Integer>> res = new ArrayList<>();
+        Arrays.sort(nums);
+        int n = nums.length;
+        for (int i = 0; i < n; i++) {
+            if (i > 0 && nums[i] == nums[i - 1]) continue;  // 去重 a
+            int a = nums[i];
+            Set<Integer> seen = new HashSet<>();
+            for (int j = i + 1; j < n; j++) {
+                int b = nums[j];
+                int c = -a - b;
+                if (seen.contains(c)) {
+                    res.add(Arrays.asList(a, c, b));
+                    while (j + 1 < n && nums[j + 1] == b) j++; // 跳过重复 b
+                } else {
+                    seen.add(b);
+                }
+            }
+        }
+        return res;
+    }
+}
+```
+
+---
+
+## 常见错误修正对照
+**1）List 长度与索引访问**
+```java
+// ❌ 错误
+// lists.length; lists[i];
+
+// ✅ 正确
+int size = lists.size();
+int val = lists.get(i);
+```
+
+**2）`Arrays.asList` 与基本类型数组**
+```java
+// ❌ 错误：List<int[]>
+List<int[]> wrong = Arrays.asList(new int[]{1,2,3});
+
+// ✅ 正确：装箱为 List<Integer>
+List<Integer> ok = Arrays.stream(new int[]{1,2,3}).boxed().collect(Collectors.toList());
+```
+
+**3）`remove` 重载（按索引 vs 按值）**
+```java
+List<Integer> list = new ArrayList<>(Arrays.asList(10, 20, 30, 40));
+list.remove(2);                      // 删除索引 2（30）
+list.remove(Integer.valueOf(40));    // 删除值 40（第一个匹配）
+```
+
+**4）Map 的方法**
+```java
+// ❌ 错误：map.add(key, value);
+// ✅ 正确：
+map.put(key, value);
+map.get(key);
+map.containsKey(key);
+```
+
+---
+
+## 附录：实用工具方法
+
+**按索引删除**（返回新数组）：
+```java
+public static int[] removeAt(int[] arr, int index) {
+    if (index < 0 || index >= arr.length) throw new IndexOutOfBoundsException();
+    int[] result = new int[arr.length - 1];
+    System.arraycopy(arr, 0, result, 0, index);
+    System.arraycopy(arr, index + 1, result, index, arr.length - index - 1);
+    return result;
+}
+```
+
+**按值删除第一个匹配**：
+```java
+public static int[] removeFirstByValue(int[] arr, int value) {
+    int idx = -1;
+    for (int i = 0; i < arr.length; i++) {
+        if (arr[i] == value) { idx = i; break; }
+    }
+    return (idx == -1) ? Arrays.copyOf(arr, arr.length) : removeAt(arr, idx);
+}
+```
+
+**按值删除所有匹配**：
+```java
+public static int[] removeAllByValue(int[] arr, int value) {
+    int count = 0;
+    for (int x : arr) if (x == value) count++;
+    if (count == 0) return Arrays.copyOf(arr, arr.length);
+    int[] result = new int[arr.length - count];
+    int j = 0;
+    for (int x : arr) if (x != value) result[j++] = x;
+    return result;
+}
+```
+
+**基于 Stream 删除所有匹配**：
+```java
+public static int[] removeAllByValueStream(int[] arr, int value) {
+    return Arrays.stream(arr).filter(x -> x != value).toArray();
+}
+```
+
+---
+
+> 建议：刷题时优先采用 **数组 + 排序 + 双指针** 的思路；在需要频繁增删时，改用 **`ArrayList`**，最后再按需转换为数组。
+
 
 -----------------------------------7-----------------------------------------
 输入：height = [0,1,0,2,1,0,1,3,2,1,2,1]
